# scrummd

./: .gitignore  README.md  intro.md  pyproject.toml  readthedocs.yaml  test.toml  tomltest.py
.github/workflows/: lint-and-test.yml  mypy.yml  pipy-publish.yml  python-app.yml  test-pypi-deploy.yml
docs/: card.rst  concepts.rst  conf.py  configuration.rst  getting_started.rst  index.rst  installation.rst  output_template_guide.rst  requirements.txt  semver.rst  tutorial1.rst
docs/commands/: commands.rst  sbench.rst  sbl.rst  sboard.rst  scard.rst  svalid.rst  swrite.rst
docs/source/: modules.rst  scrummd.rst
docs/tutorial_examples/tutorial1.2/scrum/reports/: bug1.md
docs/tutorial_examples/tutorial1.3/scrum/backlog/: card1.md
docs/tutorial_examples/tutorial1.4/: scrum.toml
docs/tutorial_examples/tutorial1.4/scrum/reports/: bug4.md
docs/tutorial_examples/tutorial1.5/scrum/backlog/: card1.md
docs/tutorial_examples/tutorial1.5/scrum/reports/: bug1.md  bug2.md
docs/tutorial_examples/tutorial1.6/: scrum.toml
scrum/: .template.md  v0-1.md  v0-2.md
scrum/backlog/: cli001.md  cli002.md  cli003.md  cli004.md  cli005.md  cli006.md  cli007.md  cli008.md  cli009.md  cli010.md  cli011.md  cli013.md  cli014.md  cli015.md  cli016.md  cli017.md  cli018.md  cli019.md  cli020.md  cli021.md  cli022.md  cli023.md  cli024.md  cli025.md  cli026.md  cli027.md  cli028.md  cli030.md  cli034.md
scrum/bugs/: cli026.md
scrum/cards/: cli001.md  cli002.md
scrum/collections/: backlog.md
scrum/proposals/: p001.md
scrum/stories/: cli001.md  cli003.md  cli005.md  cli006.md  cli009.md  cli012.md  cli013.md  cli015.md  cli017.md  cli028.md  cli029.md  cli032.md  cli033.md  cli034.md  cli035.md  cli036.md  cli037.md  cli038.md  cli039.md  cli040.md  cli041.md  cli042.md  cli043.md  cli044.md  cli045.md  cli046.md  cli047.md  cli048.md  s1.md
scrum/subtasks/: st1.md  st2.md  st3.md  st4.md  st5.md
scrum/techdebt/: cli030.md  cli031.md  td1.md  td2.md  td3.md
scrum/temp/: md5.md
scrumcli/: __init__.py  card.py  collection.py  config.py  const.py  exceptions.py  hello.py  md.py  sbl.py  sinit.py
scrummd/: __init__.py  cache.py  card.py  collection.py  config.py  config_loader.py  const.py  exceptions.py  formatter.py  md.py  sbench.py  sbl.py  sboard.py  scard.py  sinit.py  source_md.py  svalid.py  swrite.py  template.py  version.py
scrummd/sbl/: __init__.py  board_output.py  output.py  sbl.py  text_output.py
scrummd/templates/: default_md.j2  default_scard.j2
test/: fixtures.py  test_cache.py  test_card.py  test_collection.py  test_config_loader.py  test_default_md.py  test_formatter.py  test_in_anger.py  test_md.py  test_sbl.py  test_scard.py  test_source_md.py  test_svalid.py  test_swrite.py
test/data/: .scrum.toml  collection3.md  md1.md  md2.md  md3.md  md4.md  md6.md  sort_collection.md
test/data/collection1/: .meta.md  c1.md  c2.md  c3.md
test/data/collection1/embedded/: e1.md
test/data/collection2/: c4.md  c5.md  c6.md
test/data/collection2/.ignorethis/: i1.md
test/data/collection4/: c7.md
test/data/fail_cases/rule_violation/: bad_status.md
test/fail_cases/rule_violation/: bad_status.md
test/special_cases/collection_rule_violation/: bad_status.md
(+4 files in other folders)
