[project]
name = "scrummd"
authors = [{ name = "Lachlan Kingsford", email = "lachlan@nerdygentleman.com" }]
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ['jinja2~=3.1.6', 'tomli; python_version<"3.11"']
readme = "README.md"

[project.scripts]
"sbl" = "scrummd:sbl_entry"
"scard" = "scrummd:scard_entry"
"sbench" = "scrummd:sbench_entry"
"svalid" = "scrummd:svalid_entry"
"sboard" = "scrummd:sboard_entry"
"swrite" = "scrummd:swrite_entry"

[build-system]
requires = [
    "setuptools",
    "mypy",
    "pytest",
    "pylint",
    "setuptools_scm",
    "sphinx",
    "sphinx-argparse",
    "sphinx-rtd-theme",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["scrum", "test", "docs"]

[tool.setuptools_scm]
version_file = "scrummd/_version.py"

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.scrummd]
strict = true

[tool.scrummd.sboard]
default_group_by = ["status"]

[tool.scrummd.fields]
status = [
    "Not Fully Defined",
    "Ready",
    "In Progress",
    "In Testing",
    "Done",
    "Descoped",
]
